src/evaluator/statement/let_statement/tests/snapshots/monkey_interpreter__evaluator__statement__let_statement__tests__test_evaluator_let_nodes_case1.snap
---
source: src/evaluator/statement/let_statement/tests/mod.rs
expression: "evaluator.evaluate(crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap()).unwrap())"

---
Ok(
    Integer {
        value: 5,
    },
)
